fix gap between banner and about

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 .stack {
     position: absolute;
-    top: 100vh;
+    top: 94vh;
     left: 0;
     width: 100vw;
     margin: 0;
